--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.16",
     "angular2-jwt": "^0.1.27",
     "angularfire2": "^2.0.0-beta.6",
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "4.0.0-alpha.4",
     "core-js": "^2.4.1",
     "firebase": "^3.6.4",
     "font-awesome": "^4.7.0",
